some small fixes from vale action

--- a/docs/de-de/modules/payment/pages/beta-zahlungen-verwalten-neu.adoc
+++ b/docs/de-de/modules/payment/pages/beta-zahlungen-verwalten-neu.adoc
@@ -101,7 +101,7 @@ Spalten konfigurieren:
 
 . Klicke oben rechts auf *Spalten konfigurieren* (material:settings[]). +
 → Das Fenster *Spalten konfigurieren* öffnet sich.
-. Wähle aus, welche Spalten angezeigt werden sollen.
+. Wähle, welche Spalten angezeigt werden sollen.
 . Verschiebe (material:drag_indicator[]) die Spalten so, dass sie in der Reihenfolge angezeigt werden, in der du sie brauchst.
 . Klicke auf *Bestätigen*, um deine Auswahl zu speichern.
 
@@ -237,7 +237,7 @@ Klicke in der Zeile des gespeicherten Filters auf material:star_border[] *Als St
 [#payments-myview]
 == MyView nutzen
 
-Die Bedienoberfläche der Detailansichten von Zahlungen sowie der Ansicht zum Teilen einer Zahlung werden dir als MyView zur Verfügung gestellt. Das bedeutet, dass Benutzer:innen sich jeweils eine eigene Ansicht mit den zur Verfügung stehenden Elementen erstellen können. Dadurch kann jede:r selbst bestimmen, welche Informationen an welcher Stelle benötigt werden. Durch diese individuelle Ansicht wird das Arbeiten nicht nur komfortabler, sondern auch beschleunigt. +
+Die Bedienoberfläche der Detailansichten von Zahlungen sowie der Ansicht zum Teilen einer Zahlung werden dir als MyView zur Verfügung gestellt. Das bedeutet, dass Benutzer:innen sich jeweils eine eigene Ansicht mit den zur Verfügung stehenden Elementen erstellen können. Dadurch kann jede:r Benutzer:in selbst bestimmen, welche Informationen an welcher Stelle benötigt werden. Durch diese individuelle Ansicht wird das Arbeiten nicht nur komfortabler, sondern auch beschleunigt. +
 In diesem Kapitel wird erklärt, wie man mit MyView umgeht und sich eine eigene Ansicht anlegt. Das Bearbeiten von Zahlungen, z.B. das <<#30, Zuordnen>>, das <<#40, Lösen>> oder auch das <<#50, Teilen>> von Zahlungen, wird in den nachfolgenden Kapiteln erklärt.
 
 Von der Übersichtstabelle aller Zahlungen im Menü *Aufträge » Zahlungsverkehr* gelangst du auch zur Detailansicht einer Zahlung. Klicke in die entsprechende Zeile oder auf die Zahlungs-ID und die Detailansicht der ausgewählten Zahlung öffnet sich. +
@@ -251,7 +251,7 @@ Wenn du in diesen Bereichen noch keine eigene Ansicht erstellt hast, wird hier d
 . Klicke auf material:add[] *Neue Ansicht erstellen ...*.
 . Gib einen Namen ein.
 . Klicke auf *Ansicht erstellen*. +
-→ Die neue Ansicht wird erstellt und automatisch geöffnet, d.h. sie wird angewendet. Es ist jetzt möglich, zwischen den Ansichten zu wechseln.
+→ Die neue Ansicht wird erstellt und automatisch geöffnet, d.h. die Ansicht wird angewendet. Es ist jetzt möglich, zwischen den Ansichten zu wechseln.
 
 [#create-grid]
 === Ein Raster erstellen
@@ -260,7 +260,7 @@ Wenn du in diesen Bereichen noch keine eigene Ansicht erstellt hast, wird hier d
 . Füge Zeilen und Spalten hinzu, um ein Raster zu erstellen.
 .. Klicke auf icon:ellipsis-v[role="blue"] und dann auf material:add[] *Zeile hinzufügen*.
 .. Klicke auf material:add[] *Spalte hinzufügen*.
-.. Ziehe die Spalten, um sie größer oder kleiner zu machen.
+.. Ziehe die Spalten, um die Spalten zu vergrößern oder zu verkleinern.
 
 [#place-elements]
 === Elemente platzieren
@@ -406,7 +406,7 @@ Zahlung in Detailansicht zuordnen:
 Die Übereinstimmungen zwischen Zahlungen und Aufträgen werden anhand einer Matrix im Hintergrund überprüft. Diese Überprüfung wird ausgelöst, sobald du die Tabelle *Zuordnung* in der Detailansicht einer Zahlung öffnest. Dann werden absteigend maximal die 10 Aufträge mit den höchsten Übereinstimmungsraten angezeigt. +
 Sobald du eine Zahlung zugeordnet hast, wird in dieser Tabelle nur noch diese Zuordnung angezeigt. Nur wenn die Zahlung vom Auftrag <<#40, gelöst>> wird, werden hier wieder die höchsten Übereinstimmungen angezeigt.
 
-Für den Fall, dass in der Zuordnungstabelle keine Übereinstimmungen angezeigt werden, hast du weitere Möglichkeiten. Du kannst über das Kontextmenü (material:more_vert[]) folgende Optionen auswählen:
+Für den Fall, dass in der Zuordnungstabelle keine Übereinstimmungen angezeigt werden, hast du weitere Möglichkeiten. Du kannst über das Kontextmenü (material:more_vert[]) folgende Optionen wählen:
 
 * *Auftrags-ID zuordnen*: Bei Auswahl öffnet sich ein Bearbeitungsfenster. Hier kannst du direkt die Auftrags-ID des Auftrags, dem die Zahlung zugeordnet werden soll, eingeben. Durch klicken auf *Zuordnen* wird die Zahlung dem eingegebenen Auftrag zugeordnet.
 * *Suche Aufträge*: Bei Auswahl wirst du zur Auftragssuche weitergeleitet. In der Auftragssuche sind die Filter *Kundenname*, *Betrag* sowie *Unbezahlt und Teilzahlung* vorausgewählt. So werden dir gleich möglich passende Aufträge angezeigt. Du kannst die Auftragssuche aber auch anpassen, um den richtigen Auftrag zu finden. Danach kannst du die Auftrags-ID in der Zuordnungstabelle eingeben und so die Zahlung zuordnen.
@@ -437,7 +437,7 @@ Tabelle individualisieren:
 
 . Klicke auf *Spalten konfigurieren* (material:settings[]). +
 → Das Fenster *Spalten konfigurieren* öffnet sich.
-. Wähle aus, welche Spalten angezeigt werden sollen.
+. Wähle, welche Spalten angezeigt werden sollen.
 . Verschiebe (material:drag_indicator[]) die Spalten so, dass sie in der Reihenfolge angezeigt werden, in der du sie brauchst.
 . Klicke auf *Bestätigen*, um deine Auswahl zu speichern. +
 → Deine Auswahl ist gespeichert und wird angewendet.
@@ -494,7 +494,7 @@ Manuell gebuchte Zahlungseingänge erkennst du an dem Symbol material:extension[
 [#40]
 == Zahlungen lösen
 
-Es gibt zwei Möglichkeiten, Zahlungen von einem Auftrag zu lösen. Im Menü *Aufträge » Zahlungsverkehr* kannst du die Zuordnung der Zahlung entweder direkt in der <<#zahlung-loesen-uebersicht, Übersicht>> oder in der <<#zahlung-loesen-detailansicht, Detailansicht>> einer Zahlung aufheben.
+Es gibt 2 Möglichkeiten, Zahlungen von einem Auftrag zu lösen. Im Menü *Aufträge » Zahlungsverkehr* kannst du die Zuordnung der Zahlung entweder direkt in der <<#zahlung-loesen-uebersicht, Übersicht>> oder in der <<#zahlung-loesen-detailansicht, Detailansicht>> einer Zahlung aufheben.
 
 [#zahlung-loesen-uebersicht]
 === Zahlung in der Übersicht lösen
@@ -543,7 +543,7 @@ Zahlung aufteilen:
 . Klicke in der Zeile der gewünschten Zahlung auf *Zahlung aufteilen* (material:call_split[]). +
 → Du wirst weitergeleitet zu einer eigenen Ansicht, in der du das Teilen vornimmst.
 . Suche (material:search[]) anhand der Filter *Auftrags-ID*, *Rechnungsnummer*, *Externe Auftrags-ID*, *Kunden-ID* und *Name* nach den entsprechenden Aufträgen. Du kannst mehrere IDs/Nummern eingeben, indem du sie durch ein Komma separierst.
-. Wähle aus den Suchergebnissen die Aufträge aus, auf die du die Zahlung aufteilen möchtest.
+. Wähle aus den Suchergebnissen die Aufträge, auf die du die Zahlung aufteilen möchtest.
 . Klicke auf *Speichern* (material:save[]). +
 → Die Zahlung wird aufgeteilt und den ausgewählten Aufträgen in der Reihenfolge der Tabelle von oben nach unten zugeordnet und du wirst zur Zahlungsübersicht zurückgeleitet. Hier lassen sich die entstandenen Teilzahlungen wie in den anderen Kapiteln beschrieben bearbeiten.
 
@@ -599,7 +599,7 @@ Zahlung aus der Übersicht löschen:
 → Die Zahlung wird gelöscht und die Übersicht aktualisiert.
 
 [.collapseBox]
-.*Was mache ich, wenn ich eine Zahlung löschen möchte, das Löschen aber deaktiviert ist?*
+.*Was kann ich tun, wenn ich eine Zahlung löschen möchte, das Löschen aber deaktiviert ist?*
 --
 Zahlungen können nur gelöscht werden, wenn sie keinem Auftrag zugeordnet sind und keine untergeordneten Zahlungen existieren, die aus dem Teilen einer Zahlung entstanden sind. Wenn etwas davon zutrifft, ist die Funktion *Zahlung löschen* (material:delete[]) nicht verfügbar. Wenn du die Zahlung dennoch löschen möchtest, musst du dafür sorgen, dass sie weder zugeordnet ist, noch zugehörige Teilzahlungen existieren. Gehe dafür wie im Folgenden beschrieben vor:
 
@@ -622,7 +622,7 @@ Zahlung aus der Detailansicht heraus löschen:
 → Die Zahlung wird gelöscht und du wirst zur aktualisierten Übersicht zurückgeleitet.
 
 [.collapseBox]
-.*Was mache ich, wenn ich eine Zahlung löschen möchte, das Löschen aber deaktiviert ist?*
+.*Was kann ich tun, wenn ich eine Zahlung löschen möchte, das Löschen aber deaktiviert ist?*
 --
 Zahlungen können nur gelöscht werden, wenn sie keinem Auftrag zugeordnet sind und keine untergeordneten Zahlungen existieren, die aus dem Teilen einer Zahlung entstanden sind. Wenn etwas davon zutrifft, ist die Funktion *Zahlung löschen* (material:delete[]) nicht verfügbar. Wenn du die Zahlung dennoch löschen möchtest, musst du dafür sorgen, dass sie weder zugeordnet ist, noch zugehörige Teilzahlungen existieren. Gehe dafür wie im Folgenden beschrieben vor:
 
@@ -765,7 +765,7 @@ Es empfiehlt sich, vor der Auftragsbearbeitung einen Blick auf die unzugeordnete
 [TIP]
 .Empfehlung: Unzugeordnete Zahlungen einmal wöchentlich bereinigen
 ====
-Die unzugeordneten Zahlungen solltest du mindestens einmal wöchentlich bearbeiten und bereinigen, damit dir der Überblick im Tagesgeschäft nicht verloren geht. Wie du nicht zugeordnete Zahlungen und Buchungen den Aufträgen zuweist, erfährst du unter <<#30, Zahlungen zuordnen>>.
+Wir empfehlen, unzugeordneten Zahlungen mindestens einmal wöchentlich zu bearbeiten und zu bereinigen, damit  der Überblick im Tagesgeschäft nicht verloren geht. Wie du unzugeordnete Zahlungen und Buchungen den Aufträgen zuweist, erfährst du im Kapitel <<#30, Zahlungen zuordnen>>.
 ====
 
 [TIP]
