add box for assigning payments

--- a/docs/de-de/modules/payment/pages/beta-zahlungen-verwalten-neu.adoc
+++ b/docs/de-de/modules/payment/pages/beta-zahlungen-verwalten-neu.adoc
@@ -377,6 +377,12 @@ Weitere Informationen zu Benutzer:innenkonten und Zugriffsrechten findest du xre
 
 Es gibt mehrere Möglichkeiten, um unzugeordnete Zahlungen einem Auftrag zuzuordnen. Im Menü *Aufträge » Zahlungsverkehr* kannst du Zahlungen entweder direkt in der Übersichtstabelle zuordnen oder du gehst in die Detailansicht einer Zahlung.
 
+[TIP]
+.Empfehlung: Unzugeordnete Zahlungen einmal wöchentlich bereinigen
+====
+Wir empfehlen, unzugeordnete Zahlungen mindestens einmal wöchentlich zu bearbeiten und zu bereinigen, damit  der Überblick im Tagesgeschäft nicht verloren geht.
+====
+
 Eine Zuordnung in der Übersichtstabelle funktioniert über die direkte Eingabe der Auftrags-ID. Dies ist ein einfacher und schneller Weg, wenn du bereits weißt, welchem Auftrag die Zahlung zugeordnet werden soll, sonst keine weiteren Informationen zur Zahlung benötigst und die Auftrags-ID zur Hand hast.
 Gehe wie im Folgenden beschrieben vor, um eine Zahlung in der Übersichtstabelle zuzuordnen.
 
@@ -765,7 +771,7 @@ Es empfiehlt sich, vor der Auftragsbearbeitung einen Blick auf die unzugeordnete
 [TIP]
 .Empfehlung: Unzugeordnete Zahlungen einmal wöchentlich bereinigen
 ====
-Wir empfehlen, unzugeordneten Zahlungen mindestens einmal wöchentlich zu bearbeiten und zu bereinigen, damit  der Überblick im Tagesgeschäft nicht verloren geht. Wie du unzugeordnete Zahlungen und Buchungen den Aufträgen zuweist, erfährst du im Kapitel <<#30, Zahlungen zuordnen>>.
+Wir empfehlen, unzugeordnete Zahlungen mindestens einmal wöchentlich zu bearbeiten und zu bereinigen, damit  der Überblick im Tagesgeschäft nicht verloren geht. Wie du unzugeordnete Zahlungen und Buchungen den Aufträgen zuweist, erfährst du im Kapitel <<#30, Zahlungen zuordnen>>.
 ====
 
 [TIP]
