removed VAT best practice

--- a/docs/en-gb/modules/online-store/pages/best-practices.adoc
+++ b/docs/en-gb/modules/online-store/pages/best-practices.adoc
@@ -20,8 +20,9 @@ include::partial$bp-ceres-cross-selling.adoc[leveloffset=1]
 //[#additional-cross-selling-lists.adoc]
 //include::partial$bp-ceres-additional-cross-selling-lists.adoc[leveloffset=1]
 
-[#vat.adoc]
-include::partial$bp-ceres-vat.adoc[leveloffset=1]
+//[#vat.adoc]
+//include::partial$bp-ceres-vat.adoc[leveloffset=1]
+// removed due to obsolesence; however, i won't delete the actual page, since it might become useful again if other VAT adjustments become necessary
 
 [#psi.adoc]
 include::partial$bp-ceres-psi.adoc[leveloffset=1]
