Added instruction for own data fields

--- a/docs/de-de/modules/maerkte/partials/catalogue-mapping.adoc
+++ b/docs/de-de/modules/maerkte/partials/catalogue-mapping.adoc
@@ -270,3 +270,29 @@ Zahlenwerte neu berechnen:
 → Die Berechnung wird beim nächsten Export durchgeführt.
 //end::formula-config[]
 --
+
+ifdef::netto,kaufland[]
+[.collapseBox]
+.Zuordnung von eigenen Datenfeldern: 1 selbst erstelltes Datenfeld, 1 plentymarkets Datenfeld
+--
+
+Du möchtest Artikeldaten übertragen, für die es im Katalog des Marktplatzes kein Datenfeld gibt? Dann kannst du eigene Datenfelder erstellen und mit den in plentymarkets gespeicherten Artikeldaten verknüpfen.
+
+*_Hinweis:_* Eigene Datenfelder werden nicht automatisch an den Marktplatz übertragen. Beim Export entscheidet der Marktplatz, ob das Datenfeld in den Produktkatalog aufgenommen wird.
+
+[.instruction]
+Eigenes Datenfeld erstellen:
+
+. Klicke in der Navigation auf *Eigene Datenfelder* (terra:order_return_create_edit[]). +
+→ Links wird die Liste der verfügbaren plentymarkets Datenfelder als Gruppen angezeigt.
+. Wähle das plentymarkets Datenfeld, das du zuordnen möchtest. +
+→ *_Tipp:_* Du kannst auch mehrere plentymarkets Datenfelder zuordnen, die dann beim Export kombiniert werden.
+. Gib unter *Export Key* einen Namen für das eigene Datenfeld ein. +
+→ Das Datenfeld wird unter diesem Namen an den Marktplatz exportiert.
+. Gib einen Wert bei *Comparative value* ein. +
+→ Comparatives values können bei den meisten plentymarkets Datenfeldern, aber nicht bei allen plentymarkets Datenfeldern, eingegeben werden.
+. _Optional:_ Wähle ein Ausweich-Datenfeld, wenn gewünscht. +
+→ Das Ausweich-Datenfeld wird exportiert, wenn das erste Datenfeld nicht vorhanden oder leer ist.
+. Speichere (terra:save[]) die Einstellungen, wenn du alle gewünschten eigenen Datenfelder erstellt hast.
+--
+endif::netto,kaufland[]
