--- a/docs/de-de/modules/maerkte/partials/catalogue-mapping.adoc
+++ b/docs/de-de/modules/maerkte/partials/catalogue-mapping.adoc
@@ -271,7 +271,7 @@ Zahlenwerte neu berechnen:
 //end::formula-config[]
 --
 
-ifdef::netto,kaufland[]
+ifdef::eigene-datenfelder[]
 [.collapseBox]
 .Zuordnung von eigenen Datenfeldern: 1 selbst erstelltes Datenfeld, 1 plentymarkets Datenfeld
 --
@@ -295,4 +295,4 @@ Eigenes Datenfeld erstellen:
 → Das Ausweich-Datenfeld wird exportiert, wenn das erste Datenfeld nicht vorhanden oder leer ist.
 . Speichere (terra:save[]) die Einstellungen, wenn du alle gewünschten eigenen Datenfelder erstellt hast.
 --
-endif::netto,kaufland[]
+endif::eigene-datenfelder[]
