correct error messages - EN

--- a/docs/en-gb/modules/business-decisions/pages/messageTagRelations.adoc
+++ b/docs/en-gb/modules/business-decisions/pages/messageTagRelations.adoc
@@ -6,7 +6,7 @@
 :dataFormat: pass:quotes[*messageTagRelations*]
 :data: Links between messages and tags
 :specifications: <<table-specifications-messageTagRelations>>
-:dataColums: <<table-data-columns-messageTagRelations>>
+:dataColumns: <<table-data-columns-messageTagRelations>>
 
 include::partial$einleitung-en_gb.adoc[]
 
