--- a/docs/en-gb/modules/business-decisions/pages/messages-raw-data.adoc
+++ b/docs/en-gb/modules/business-decisions/pages/messages-raw-data.adoc
@@ -7,7 +7,7 @@
 :dataFormat: pass:quotes[*messages*]
 :data: Messages from the messenger
 :specifications: <<table-specifications-messages>>
-:dataColums: <<table-data-columns-messages>>
+:dataColumns: <<table-data-columns-messages>>
 
 include::partial$einleitung-en_gb.adoc[]
 
