--- a/docs/en-gb/modules/business-decisions/pages/marketplace-stock-information.adoc
+++ b/docs/en-gb/modules/business-decisions/pages/marketplace-stock-information.adoc
@@ -10,12 +10,6 @@ You currently can visualise the marketplace stock information to the following m
 
 * Amazon
 
-[IMPORTANT]
-.The key figure {key-figure} is new!
-====
-The key figure *{key-figure}* is a new feature. We are working on visualising the stock information to additional markets.
-====
-
 include::partial$key-figure-introduction.adoc[]
 
 [#300]
@@ -23,7 +17,7 @@ include::partial$key-figure-introduction.adoc[]
 
 === Marketplace stock information
 
-:this-means: As such, the calculations are based on the stock information that was exported to the market.
+:that-means: As such, the calculations are based on the stock information that was exported to the market.
 
 include::partial$marketplace-stockmovement.adoc[]
 
@@ -32,14 +26,14 @@ include::partial$marketplace-stockmovement.adoc[]
 
 === Creation date
 
-:that-means: As such, the data is grouped based on the time the stock information for a variation was communicated to the market.
+:this-means: As such, the data is grouped based on the time the stock information for a variation was communicated to the market.
 
 include::partial$creation-date.adoc[]
 
 [#500]
 == Filter
 
-:filtered-data: of stock information. That is the time that the stock information was sent to the market.
+:filtered-data: of stock information. That is the time that the stock information was sent to the market
 
 include::partial$created-at.adoc[]
 
@@ -47,15 +41,15 @@ include::partial$created-at.adoc[]
 .Relational operators for this filter
 --
 
-[[table-key-figures-operators-created]]
-[cols="1,1,3"]
-|====
-| Relational operator | Operator | Explanation
-
 
 :filter-ending: selected values
 :filter: selected values (icon:check-square[role="blue"])
 :commas: Use commas to separate multiple values.
+
+[[table-key-figures-operators-created]]
+[cols="1,1,3"]
+|====
+| Relational operator | Operator | Explanation
 
 include::partial$is-equal-to.adoc[]
 
@@ -99,7 +93,7 @@ include::partial$referrer.adoc[]
 .Relational operators for this filter
 --
 
-[[table-key-figures-operators-created]]
+[[table-key-figures-operators-created-2]]
 [cols="1,1,3"]
 |====
 | Relational operator | Operator | Explanation
