--- a/docs/en-gb/modules/business-decisions/pages/marketplace-variation-validation.adoc
+++ b/docs/en-gb/modules/business-decisions/pages/marketplace-variation-validation.adoc
@@ -39,7 +39,7 @@ include::partial$number.adoc[]
 
 === Creation date
 
-:that-means: As such, this data is grouped according to the date and time that the validation was performed.
+:this-means: As such, this data is grouped according to the date and time that the validation was performed.
 
 include::partial$creation-date.adoc[]
 
