--- a/docs/en-gb/modules/markets/pages/mediamarkt-setup.adoc
+++ b/docs/en-gb/modules/markets/pages/mediamarkt-setup.adoc
@@ -10,6 +10,7 @@
 :assistant-name: Mediamarkt
 :valid-values-zip: https://drive.google.com/file/d/1a_QY4VOIuC2-qYFbNkCMUX-9jerGDAOmYP72907Xt/view?usp=sharing
 :market-backend-shipping: Platform Settings » Shipping
+:mirakl-menu-shipping: Platform Settings » Shipping
 :referrer-name: pass:quotes[referrer *Mediamarkt*]
 
 [.previous-next-navigation]
