fixed broken anchors

--- a/docs/en-gb/modules/online-store/pages/shop-builder.adoc
+++ b/docs/en-gb/modules/online-store/pages/shop-builder.adoc
@@ -47,7 +47,7 @@ image::webshop:ShopBuilder-UI1.png[]
 [#top-bar]
 === Top bar
 
-[[table-top-bar]]
+[[table-top-bar-ui]]
 .Elements of the top bar
 [cols="1,3"]
 |====
@@ -550,7 +550,7 @@ This widget provides the category navigation. Click *Edit* icon:cog[role="darkGr
 
 |====
 
-[top-bar]
+[#top-bar]
 ==== Top bar
 
 This widget provides a top bar for the header. Click *Edit* icon:cog[role="darkGrey"] to open the widget settings. +
@@ -604,7 +604,7 @@ This widget provides a top bar for the header. Click *Edit* icon:cog[role="darkG
 
 This widget recognises the user’s browser language and offers a redirect to shop contents in the detected language.
 
-[[table-top-bar]]
+[[table-language-detection]]
 .Language detection settings
 [cols="1,3"]
 |====
@@ -1603,7 +1603,7 @@ This widget provides an input field via which your customers can redeem coupon c
 
 This widget provides an overview over the totals, calculated on the basis of the items that are currently in the customer’s shopping cart. Click *Edit* icon:cog[role="darkGrey"] to open the widget settings. +
 
-[[table-totals]]
+[[table-totals-shopping-cart]]
 .Settings totals
 [cols="1,3"]
 |====
@@ -2064,7 +2064,7 @@ This widget provides a list of ordered items, including item image, item name, s
 
 This widget provides a list of order totals. Click *Edit* icon:cog[role="darkGrey"] to open the widget settings. +
 
-[[table-totals]]
+[[table-totals-checkout]]
 .Settings totals
 [cols="1,3"]
 |====
@@ -2313,8 +2313,8 @@ This widget category lists all widgets that can only be used in the footer of yo
 
 The cookie bar widget provides the consent management tool to your customers, which they can use to accept and reject cookies in your plentyShop. The cookie bar automatically manages all cookies provided by plentyShop LTS and other plugins. Note that you can carry out additional settings in the plentyShop assistant. Click *Edit* icon:cog[role="darkGrey"] to open the widget settings. +
 
-[[table-privacy-policy]]
-.Settings Privacy policy
+[[table-consent-tool]]
+.Settings Cookie bar
 [cols="1,3"]
 |====
 |Setting |Explanation
