FIX more broken links

--- a/docs/de-de/modules/daten/pages/item.adoc
+++ b/docs/de-de/modules/daten/pages/item.adoc
@@ -41,7 +41,7 @@ Das Erstellen von neuen Kategorien ist mit dem Datenformat **Item** nicht mögli
 
 * **Artikelbilder**
 
-Mit diesem Datenformat können externe Bilder mittels URL importiert werden. Dabei werden vorhandene Artikelbilder ersetzt. Werden mehrere Artikelbilder importiert, müssen diese Artikelbilder kommagetrennt ohne Leerzeichen angegeben werden. Wenn du vorhandene Bilder nicht ersetzen möchtest, importierst du die xref:artikel:artikel-verwalten.adoc#680[Bilder] ggf. per FTP-Upload.
+Mit diesem Datenformat können externe Bilder mittels URL importiert werden. Dabei werden vorhandene Artikelbilder ersetzt. Werden mehrere Artikelbilder importiert, müssen diese Artikelbilder kommagetrennt ohne Leerzeichen angegeben werden. Wenn du vorhandene Bilder nicht ersetzen möchtest, importierst du die xref:artikel:import-export-anlage-verzeichnis.adoc#90[Bilder] ggf. per FTP-Upload.
 
 [#30]
 == Übersicht der Datenfelder
@@ -240,7 +240,7 @@ Bei Verwendung dieses Datenfelds ist auf die korrekte Schreibweise der Herstelle
 |
 
 | **ItemShippingWithAmazonFBA**
-|xref:maerkte:amazon-einrichten.adoc#370[Amazon Multi-Channel] +
+|xref:item:import-export-anlage-verzeichnis.adoc#_amazon[Amazon FBA] +
 **1** = Ja +
 **0** = Nein
 |
