--- a/docs/de-de/modules/warenwirtschaft/pages/waren-ausbuchen.adoc
+++ b/docs/de-de/modules/warenwirtschaft/pages/waren-ausbuchen.adoc
@@ -103,7 +103,7 @@ Beim Buchen des Warenausgangs wird durch das System automatisch der Auftragsstat
 Es handelt sich hierbei um einen Systemautomatismus.
 Du kannst den Status nutzen, um zu prüfen, ob nach dem Import alle Warenausgänge gebucht wurden.
 
-Eine weitere Möglichkeit, die Paketnummern zu importieren, ist per xref:fulfillment:dokumente-erzeugen.adoc#paketnummern-csv-datei[CSV-Datei].
+Eine weitere Möglichkeit, die Paketnummern zu importieren, ist per xref:daten:praxisbeispiel-elasticsync-paketnummern-fulfillment.adoc#[CSV-Datei].
 
 [#40]
 === Warenausgang automatisch beim Erstellen der Rechnung buchen
