--- a/docs/de-de/modules/willkommen/pages/schnelleinstieg-warenwirtschaft.adoc
+++ b/docs/de-de/modules/willkommen/pages/schnelleinstieg-warenwirtschaft.adoc
@@ -7,7 +7,7 @@ IMPORTANT: Hast du schon deine Kontaktdaten gespeichert, dein E-Mail-Konto und d
 
 Für eine funktionierende Warenwirtschaft müssen mindestens Lager, Lieferant:in und Warenbestand eingerichtet werden. Die beiden ersteren werden auf dieser Seite behandelt.
 
-Wenn du die Warenbestände nicht in plentymarkets führen möchtest, wähle im Menü *Artikel » Artikel bearbeiten* im Tab *Varianten-ID » Einstellungen* bei der Einstellung *Beschränkung* die Option *Keinen Warenbestand für diese Variante führen*. Fahre dann fort mit xref:artikel:artikel-verwalten.adoc#660[Artikelbilder verwalten].
+Wenn du die Warenbestände nicht in plentymarkets führen möchtest, wähle im Menü *Artikel » Artikel bearbeiten* im Tab *Varianten-ID » Einstellungen* bei der Einstellung *Beschränkung* die Option *Keinen Warenbestand für diese Variante führen*. Fahre dann fort mit xref:artikel:import-export-anlage-verzeichnis.adoc#90[Artikelbilder verwalten].
 
 [#100]
 == Lager einrichten
