--- a/docs/de-de/modules/willkommen/pages/systemvoraussetzungen.adoc
+++ b/docs/de-de/modules/willkommen/pages/systemvoraussetzungen.adoc
@@ -67,9 +67,9 @@ Wenn du Probleme bei der Nutzung von plentymarkets hast, können folgende Punkte
 [#200]
 == Apps von plentymarkets nutzen
 
-Die xref:app:app.adoc#[plentymarkets App] bietet umfassende Funktionen für das Abrufen von Kennzahlen sowie für die Kunden-, Artikel- und Auftragssuche. Für diese Funktionen benötigst du ein mobiles Android- oder iOS-Gerät. Die plentymarkets App stellt außerdem Funktionen für die mobile Warenwirtschaft sowie das Kassensystem xref:pos:pos.adoc#[plentyPOS] bereit. 
+Die xref:app:app.adoc#[plentymarkets App] bietet umfassende Funktionen für das Abrufen von Kennzahlen sowie für die Kunden-, Artikel- und Auftragssuche. Für diese Funktionen benötigst du ein mobiles Android- oder iOS-Gerät. Die plentymarkets App stellt außerdem Funktionen für die mobile Warenwirtschaft sowie das Kassensystem xref:pos:pos.adoc#[plentyPOS] bereit.
 
-Weiterhin steht dir die <<warenwirtschaft/plentywarehouse#plentyWarehouse App (beta)>> zur Verfügung, die überarbeitete Funktionen zur mobilen Warenwirtschaft enthält. 
+Weiterhin steht dir die xref:warenwirtschaft:plentywarehouse.adoc#[plentyWarehouse App (beta)] zur Verfügung, die überarbeitete Funktionen zur mobilen Warenwirtschaft enthält.
 
 Hier erfährst du, welche Hardware du benötigst, um beide Apps zu nutzen.
 
