--- a/docs/de-de/modules/warenwirtschaft/pages/leitfaden-inventur.adoc
+++ b/docs/de-de/modules/warenwirtschaft/pages/leitfaden-inventur.adoc
@@ -1,4 +1,4 @@
-= Leitfaden zur Inventur
+warenbewegung-exportieren= Leitfaden zur Inventur
 :keywords: Inventur, plentyWarehouse App, plenty warehouse app, plenty-warehouse App, Zählprotokoll, Warenbewegungen exportieren, Warenbestände exportieren, Inventur vornehmen, Inventur durchführen, Tipps Inventur
 :id: 1SHGYNJ
 :author: team-stock, team-mobile
@@ -33,7 +33,7 @@ Um eine Inventur durchzuführen und diese später auch dokumentieren und kontrol
 
 * Wie du generell einen Katalog für den Export von Daten erstellst, erfährst du auf der Handbuchseite zu den xref:daten:dateiexport.adoc#[Standardformaten von Katalogen].
 * Wie du einen Export der Warenbestände in einem Katalog erstellst, erfährst du auf der Handbuchseite des Formats xref:daten:katalog-warenbestaende.adoc#[Warenbestände].
-* Wie du einen Export der Warenbewegungen in einem Katalog erstellst, erfährst du auf der Handbuchseite des Formats xref:daten:katalog-warenbewegungen.adoc#[Warenbewegungen].
+* Wie du einen Export der Warenbewegungen in einem Katalog erstellst, erfährst du auf der Handbuchseite des Formats xref:daten:warenbewegung-exportieren.adoc#[Warenbewegungen].
 
 [#400]
 === Bestände per Import nullen
@@ -150,7 +150,7 @@ Bei dieser Methode vergleichst du die beiden Bestands-Dateien, die du vor und na
 [#1300]
 === Vergleich der Gesamtabweichungen pro Variante
 
-Erstelle einen Export mit dem Katalogformat xref:daten:katalog-warenbewegungen.adoc#[Warenbewegungen] und filtere dabei nach dem xref:daten:katalog-warenbewegungen.adoc#30[Datumsbereich] und dem xref:daten:katalog-warenbewegungen.adoc#30[Grund] für die Warenbewegung (ID 302). So werden nur die Warenbewegungen exportiert, die während und durch die Inventur entstanden sind. Wenn du ebenfalls den Filter für die xref:daten:katalog-warenbewegungen.adoc#30[Summe der Warenbewegungen] pro Variante nutzt, enthält der Export nur eine Datenzeile pro Variante.
+Erstelle einen Export mit dem Katalogformat xref:daten:warenbewegung-exportieren.adoc#[Warenbewegungen] und filtere dabei nach dem xref:daten:warenbewegung-exportieren.adoc#20[Datumsbereich] und dem xref:daten:warenbewegung-exportieren.adoc#20[Grund] für die Warenbewegung (ID 302). So werden nur die Warenbewegungen exportiert, die während und durch die Inventur entstanden sind. Wenn du ebenfalls den Filter für die xref:daten:warenbewegung-exportieren.adoc#20[Summe der Warenbewegungen] pro Variante nutzt, enthält der Export nur eine Datenzeile pro Variante.
 Dies ist allerdings auch nur dann der Fall, wenn bei dieser Variante vor und nach der Inventur eine Abweichung bei den Mengen vorliegt. Sind die Mengen auf allen Lagerorten identisch, dann erhältst du keine Datenzeile. Weichen die Mengen pro Lagerort ab, aber die Gesamtmenge der Bestände dieser Variante ist identisch, enthält der Export eine Datenzeile mit der Menge 0 im Feld *Warenbewegung*.
 
 Diese Art des Exports ermöglicht es dir, schnell zu erfassen, bei welchen Artikeln es Abweichungen in der Gesamtmenge pro Variante gegeben hat.
@@ -159,22 +159,22 @@ Weitere Details dazu findest du im Kapitel zum Thema xref:warenwirtschaft:leitfa
 [#1400]
 === Vergleich der Abweichungen einer Variante pro Lagerort
 
-Erstelle einen Export über das Katalogformat xref:daten:katalog-warenbewegungen.adoc#[Warenbewegungen], allerdings ohne den Filter für die Summe der Warenbewegungen. Es werden also lediglich der Datumsfilter und der Grund für die Warenbewegung (ID 302) benötigt. Mit dieser Methode erhältst du eine Datenzeile, wenn der Bestand einer Variante auf einem bestimmten Lagerort vor und nach der Inventur abweicht. Diese Liste ist hilfreich, wenn du durch die Liste der Gesamtabweichungen festgestellt hast, dass du eine Variante noch einmal genauer kontrollieren musst. Prüfe jeden Lagerort, auf dem es Abweichungen für diese Variante gegeben hat und stelle so fest, auf welchem Lagerort du noch einmal genauer nachschauen solltest.
+Erstelle einen Export über das Katalogformat xref:daten:warenbewegung-exportieren.adoc#[Warenbewegungen], allerdings ohne den Filter für die Summe der Warenbewegungen. Es werden also lediglich der Datumsfilter und der Grund für die Warenbewegung (ID 302) benötigt. Mit dieser Methode erhältst du eine Datenzeile, wenn der Bestand einer Variante auf einem bestimmten Lagerort vor und nach der Inventur abweicht. Diese Liste ist hilfreich, wenn du durch die Liste der Gesamtabweichungen festgestellt hast, dass du eine Variante noch einmal genauer kontrollieren musst. Prüfe jeden Lagerort, auf dem es Abweichungen für diese Variante gegeben hat und stelle so fest, auf welchem Lagerort du noch einmal genauer nachschauen solltest.
 Weitere Details dazu findest du im nachfolgenden Kapitel zum Thema xref:warenwirtschaft:leitfaden-inventur.adoc#1500[Abweichungen feststellen und auswerten].
 
 [#1500]
 == Bestandsabweichungen feststellen und auswerten
 
-Das Katalogformat xref:daten:katalog-warenbewegungen.adoc#[Warenbewegungen] vereinfacht die Auswertung der Inventurergebnisse. Der Katalog mit diesem Format ermöglicht es, Abweichungen zwischen Zählung und vorherigem Bestand im System pro Variante sowie Abweichungen auf einzelnen Lagerorten festzustellen. +
+Das Katalogformat xref:daten:warenbewegung-exportieren.adoc#[Warenbewegungen] vereinfacht die Auswertung der Inventurergebnisse. Der Katalog mit diesem Format ermöglicht es, Abweichungen zwischen Zählung und vorherigem Bestand im System pro Variante sowie Abweichungen auf einzelnen Lagerorten festzustellen. +
 Beachte die folgenden Kriterien, um Abweichungen bei Warenbeständen nach der Inventur festzustellen.
 
 [#1600]
 === Kriterium 1: Sind die Bestände eines Artikels vor und nach der Inventur identisch?
 
-Um zu prüfen, ob die Bestände eines Artikels vor und nach der Inventur identisch sind, erstelle einen Katalog mit dem Format xref:daten:katalog-warenbewegungen.adoc#[Warenbewegungen]. Exportiere dir damit alle Warenbewegungen (gruppiert pro Variante), die im Zeitraum der Inventur für den Warenbewegungsgrund *Korrektur durch Inventur* durchgeführt wurden.
+Um zu prüfen, ob die Bestände eines Artikels vor und nach der Inventur identisch sind, erstelle einen Katalog mit dem Format xref:daten:warenbewegung-exportieren.adoc#[Warenbewegungen]. Exportiere dir damit alle Warenbewegungen (gruppiert pro Variante), die im Zeitraum der Inventur für den Warenbewegungsgrund *Korrektur durch Inventur* durchgeführt wurden.
 
-Um pro Variante zu gruppieren, nutze im Katalog den Filter xref:daten:katalog-warenbewegungen.adoc#30[Summe der Warenbewegungen]. Wähle über einen weiteren Filter zusätzlich auch den xref:daten:katalog-warenbewegungen.adoc#30[Datumsbereich], in dem die Inventur stattgefunden hat.
-Um nur die Warenbewegungen zu exportieren, die mit der Inventur zu tun haben, setze außerdem den Filter für den xref:daten:katalog-warenbewegungen.adoc#30[Grund] *Warenkorrektur durch Inventur* mit der ID `302`.
+Um pro Variante zu gruppieren, nutze im Katalog den Filter xref:daten:warenbewegung-exportieren.adoc#20[Summe der Warenbewegungen]. Wähle über einen weiteren Filter zusätzlich auch den xref:daten:warenbewegung-exportieren.adoc#20[Datumsbereich], in dem die Inventur stattgefunden hat.
+Um nur die Warenbewegungen zu exportieren, die mit der Inventur zu tun haben, setze außerdem den Filter für den xref:daten:warenbewegung-exportieren.adoc#20[Grund] *Warenkorrektur durch Inventur* mit der ID `302`.
 Als Ergebnis wird die Gesamtabweichung pro Variante ausgegeben. Im besten Fall ist diese immer 0. +
 Die exportierte Liste zeigt dir somit auf einen Blick, bei welchen Artikeln es Abweichungen vor und nach der Inventur gegeben hat.
 
@@ -184,9 +184,9 @@ Die exportierte Liste zeigt dir somit auf einen Blick, bei welchen Artikeln es A
 === Kriterium 2: Liegen die Artikel vor und nach der Inventur auf den gleichen Lagerorten?
 
 Über einen längeren Zeitraum hinweg kann es vorkommen, dass Ware umgelagert wurde, das Umbuchen im System allerdings nicht stattgefunden hat. +
-Um Abweichungen von Artikeln auf einzelnen Lagerorten sehen zu können, erstelle einen Katalog mit dem Format xref:daten:katalog-warenbewegungen.adoc#[Warenbewegungen]. Exportiere dir damit alle Warenbewegungen, die im Zeitraum der Inventur für den Warenbewegungsgrund *Korrektur durch Inventur* durchgeführt wurden.
+Um Abweichungen von Artikeln auf einzelnen Lagerorten sehen zu können, erstelle einen Katalog mit dem Format xref:daten:warenbewegung-exportieren.adoc#[Warenbewegungen]. Exportiere dir damit alle Warenbewegungen, die im Zeitraum der Inventur für den Warenbewegungsgrund *Korrektur durch Inventur* durchgeführt wurden.
 
-Nutze dafür zunächst den Filter für den xref:daten:katalog-warenbewegungen.adoc#30[Datumsbereich], in dem die Inventur stattgefunden hat. Um nur die Warenbewegungen zu erhalten, die mit der Inventur zu tun haben, verwende außerdem den Filter für den xref:daten:katalog-warenbewegungen.adoc#30[Grund] *Korrektur durch Inventur* mit der ID `302`.
+Nutze dafür zunächst den Filter für den xref:daten:warenbewegung-exportieren.adoc#20[Datumsbereich], in dem die Inventur stattgefunden hat. Um nur die Warenbewegungen zu erhalten, die mit der Inventur zu tun haben, verwende außerdem den Filter für den xref:daten:warenbewegung-exportieren.adoc#20[Grund] *Korrektur durch Inventur* mit der ID `302`.
 Als Ergebnis bekommst du pro Warenbewegung, also pro Abweichung gegenüber dem Ergebnis vor der Inventur, einen Eintrag in der Liste. +
 *_Beispiel:_* Die Variante mit der ID 123 wurde im System 10 Mal auf Lagerort A gebucht, während der Inventur dort aber nicht gezählt, dafür aber 10 Mal auf Lagerort B. In diesem Fall besteht für diese Variante eine Warenbewegung von -10 für Lagerort A und eine Warenbewegung von +10 für Lagerort B. In der Summe bedeutet das, dass die Gesamtmenge vor und nach der Inventur für diese Variante identisch ist, aber physisch auf einem anderen Lagerort liegt als zuvor.
 
