--- a/docs/en-gb/modules/business-decisions/pages/sales-volume.adoc
+++ b/docs/en-gb/modules/business-decisions/pages/sales-volume.adoc
@@ -21,14 +21,14 @@ Set xref:business-decisions:sales-volume.adoc#300[filters] to specify the criter
 :key-figure: Sales volume
 :that-means: This means that the order items of credit notes and returns are not subtracted from the total quantity when these order types are selected in the filter Order type.
 
-include::partial$brutto.adoc[]
+include::partial$gross.adoc[]
 
 === Net sales volume
 
 :key-figure: Sales volume
 :that-means: This means that the order items of credit notes and returns are subtracted from the total quantity when these order types are selected in the filter Order type.
 
-include::partial$netto.adoc[]
+include::partial$net.adoc[]
 
 [#200]
 == Dimension
@@ -366,7 +366,7 @@ include::partial$corresponds-to-none-of-these-values.adoc[]
 
 // Item ID
 
-include::partial$artikel-id.adoc[]
+include::partial$item-id.adoc[]
 
 [.collapseBox]
 .Comparison operators available for this filter
@@ -823,7 +823,7 @@ include::partial$is-not-equal.adoc[]
 
 // Return reason
 
-include::partial$retourengrund.adoc[]
+include::partial$return-reason.adoc[]
 
 [.collapseBox]
 .Comparison operators available for this filter
