--- a/docs/en-gb/modules/orders/pages/subscription.adoc
+++ b/docs/en-gb/modules/orders/pages/subscription.adoc
@@ -210,7 +210,7 @@ Click on icon:caret-down[role="darkGrey"] to switch to a different view or creat
 In case of unsaved changes, a dialogue is displayed.
 |====
 
-[#900]
+[#granting-rights]
 ==== Granting rights
 
 Which users or roles should be allowed to see the view?
