Fix broken links - 1

--- a/docs/de-de/modules/glossar/partials/listing.adoc
+++ b/docs/de-de/modules/glossar/partials/listing.adoc
@@ -1,3 +1,3 @@
 [#listing]
-Listing:: Mit Listings verwaltest du die Artikel, die du auf den Marktplätzen eBay, Hood und ricardo anbietest. Im Listing nimmst du also Einstellungen vor, die für alle Listings gelten, unabhängig vom Marktplatz. Zum Beispiel sind das Einstellungen zur Bestandsabhängigkeit oder zum Inhalt des Listings. Außerdem wird der Listing-Typ festgelegt. Es gibt Listings vom Typ <<#festpreis, Festpreis>>, <<#auktion, Auktion>> oder <<#shop-artikel, Shop-Artikel>>. +
+Listing:: Mit Listings verwaltest du die Artikel, die du auf den Marktplätzen eBay, Hood und ricardo anbietest. Im Listing nimmst du also Einstellungen vor, die für alle Listings gelten, unabhängig vom Marktplatz. Das sind zum Beispiel Einstellungen zur Bestandsabhängigkeit oder zum Inhalt des Listings. Außerdem wird der Listing-Typ festgelegt. Es gibt Listings vom Typ <<#festpreis, Festpreis>>, <<#auktion, Auktion>> oder <<#shop-artikel, Shop-Artikel>>. +
 Zu einem Listing können mehrere <<#market-listing, Market-Listings>> gehören.
