--- a/docs/de-de/modules/maerkte/pages/check24.adoc
+++ b/docs/de-de/modules/maerkte/pages/check24.adoc
@@ -107,7 +107,7 @@ Die URL für den Produktexport (Katalog-Format *Check24*) kannst du nicht selbst
 
 In diesem Kapitel wird beschrieben, wie du deine Artikel zu Check24 überträgst. Im alten Plugin werden Artikel über den elastischen Export mit dem Datenformaten Check24DE zu Check24 exportiert.
 
-NOTE: Der Elastische Export und das Exportformat für Check24 werden für den Marktplatz-Export nicht mehr weiterentwickelt. Wir empfehlen dir deshalb, <<#900, Kataloge für Check24 zu erstellen>>.
+NOTE: Der Elastische Export und das Exportformat für Check24 werden für den Marktplatz-Export nicht mehr weiterentwickelt. Wir empfehlen dir deshalb, <<#catalogue-export, Kataloge für Check24 zu erstellen>>.
 
 ==== Plugins für Elastischen Export installieren
 
@@ -381,7 +381,7 @@ Weitere Informationen zu den verschiedenen Formaten findest du im Kapitel <<#che
 
 include::partial$catalogue-creation.adoc[]
 
-[#catalogue-mapping]
+[#data-field-mappings]
 ==== Datenfelder im Katalog zuordnen
 
 Ordne nun die Datenfelder von Check24 den in plentymarkets gespeicherten Artikeldaten zu.
