--- a/docs/de-de/modules/maerkte/pages/limango.adoc
+++ b/docs/de-de/modules/maerkte/pages/limango.adoc
@@ -630,7 +630,7 @@ Lieferscheine sind bei limango gleichzeitig Retourenscheine. Lieferscheine für 
 * {market}-Kundennummer
 * {market}-Bestellnummer
 
-Wie du Layout-Vorlagen für Auftragsdokumente in plentymarkets erstellst, wird im Handbuchbereich xref:auftraege:auftragsdokumente.adoc#170[Aufträge] beschrieben. Hier auf dieser Seite erfährst du, wie du die PDF-Vorlage hochlädst und die Besonderheiten für den Marktplatz auf deinen Lieferscheinen anzeigst:
+Wie du Layout-Vorlagen für Auftragsdokumente in plentymarkets erstellst, wird im Handbuchbereich xref:auftraege:auftragsdokumente.adoc#[Aufträge] beschrieben. Hier auf dieser Seite erfährst du, wie du die PDF-Vorlage hochlädst und die Besonderheiten für den Marktplatz auf deinen Lieferscheinen anzeigst:
 
 * <<#160011, PDF-Vorlage für Lieferscheine personalisieren>>
 * <<#16001, PDF-Vorlage für Lieferscheine hochladen>>
