--- a/docs/de-de/modules/maerkte/pages/shopgate.adoc
+++ b/docs/de-de/modules/maerkte/pages/shopgate.adoc
@@ -240,7 +240,7 @@ include::partial$zahlungsart_aktivieren.adoc[]
 Wenn du die Zahlungsart *Amazon Pay* nutzen möchtest, richte für Shopgate kein separates Konto für Amazon Pay ein, sondern nutze das in plentymarkets eingerichtete Konto.
 ====
 
-Je nach Zahlungsart erfolgen Rechnungserzeugung sowie Rechnungsversand bereits durch Shopgate, sodass du keine Rechnung mehr an Kund:innen schicken musst. Du kannst prüfen, ob die Rechnungserzeugung und der Rechnungsversand durch Shopgate erfolgen, indem du jeweils deine Aufträge von Shopgate prüfst oder eine xref:automatisierung:ereignisaktionen.adoc#neue-ereignisaktion[Ereignisaktion] einrichtest, um die Rechnungserzeugung und den Rechnungsversand zu automatisieren.
+Je nach Zahlungsart erfolgen Rechnungserzeugung sowie Rechnungsversand bereits durch Shopgate, sodass du keine Rechnung mehr an Kund:innen schicken musst. Du kannst prüfen, ob die Rechnungserzeugung und der Rechnungsversand durch Shopgate erfolgen, indem du jeweils deine Aufträge von Shopgate prüfst oder eine xref:automatisierung:ereignisaktionen.adoc#[Ereignisaktion] einrichtest, um die Rechnungserzeugung und den Rechnungsversand zu automatisieren.
 
 [#700]
 == Stornierungen automatisch senden
