--- a/docs/de-de/modules/maerkte/partials/manage-listings.adoc
+++ b/docs/de-de/modules/maerkte/partials/manage-listings.adoc
@@ -10,25 +10,29 @@ Mit Listings stellst du deine Artikel auf den Marktplätzen eBay, Hood und ricar
 [.collapseBox]
 .Was ist ein Listing?
 --
-include::glossar:partial$listing.adoc[]
+Mit Listings verwaltest du die Artikel, die du auf den Marktplätzen eBay, Hood und ricardo anbietest. Im Listing nimmst du also Einstellungen vor, die für alle Listings gelten, unabhängig vom Marktplatz. Das sind zum Beispiel Einstellungen zur Bestandsabhängigkeit oder zum Inhalt des Listings. Außerdem wird der Listing-Typ festgelegt.
 
 Es gibt die folgenden Listing-Typen:
 
-* <<#festpreis, Festpreis>>
-* <<#auktion, Auktion>>
-* <<#shop-artikel, Shop-Artikel>>
+* *Festpreis*: Ein Listing, das zum Festpreis angeboten wird und auf das nicht geboten werden kann.
+* *Auktion*: Auktionen sind bei den Marktplätzen eBay, Hood und ricardo möglich. Bei Listings vom Typ *Auktion* wird ein Startpreis für die Auktion festgelegt und Käufer:innen bieten auf den Artikel.
+* *Shop-Artikel*: Listing-Typ für den Marktplatz Hood. Der Artikel wird im Hood-Shop angeboten.
+
+Zu einem Listing können mehrere Market-Listings gehören.
 --
 
 [.collapseBox]
 .Was ist ein Market-Listing?
 --
-include::glossar:partial$market-listing.adoc[]
+Ein Angebot, das auf den Marktplätzen eBay, Hood und ricardo eingestellt wird. Ein Market-Listing ist immer genau einem Listing zugeordnet. Im Market-Listing werden u.a. marktplatzspezifische Einstellungen vorgenommen.
 --
 
 [.collapseBox]
 .Was ist eine Listing-Vorlage?
 --
-include::glossar:partial$listing-vorlage.adoc[]
+Eine Vorlage für Listings, die entweder über die Listing-Gruppenfunktion im Menü *Listings » Listings bearbeiten » Tab: Gruppenfunktion* oder über REST erstellt werden kann. Eine Listing-Vorlage enthält Einstellungen zu Listings, Market-Listings und Aktionen zu Listings sowie spezifische Optionen für eBay, Hood und ricardo. Die Vorlage kann für beliebig viele Listings verwendet werden.
+
+Listing-Vorlagen können bei der Erstellung eines neuen Listings über *Artikel öffnen » Neues Listing* im Fenster *Neues Market-Listing* mit der Option *Listing-Vorlage* oder im Tab *Multi-Channel* eines Artikels mit der Option *Listing-Vorlage* auf ein Listing angewandt werden. Außerdem können bereits erstellte Listing-Vorlagen entweder über die Listing-Gruppenfunktion im Menü *Listings » Listings bearbeiten » Gruppenfunktion* in der Dropdown-Liste *Keine Vorlage* oder über die Artikel-Gruppenfunktion im Menü *Artikel » Artikel bearbeiten » Artikel-Gruppenfunktion* mit der Option *Listing-Vorlage* gewählt werden.
 --
 //end::listing-definition[]
 
