--- a/docs/de-de/modules/maerkte/pages/conrad.adoc
+++ b/docs/de-de/modules/maerkte/pages/conrad.adoc
@@ -139,7 +139,7 @@ include::partial$mirakl-data-link-categories.adoc[]
 
 include::partial$properties-link.adoc[]
 
-[#{market}]
+[#catalogue-activation]
 == Katalogexport aktivieren
 
 :interval: täglich
