--- a/docs/de-de/modules/maerkte/pages/varianten-exportieren-datenexport.adoc
+++ b/docs/de-de/modules/maerkte/pages/varianten-exportieren-datenexport.adoc
@@ -238,7 +238,7 @@ Wenn du weitere Amazon-Services nutzen möchtest:
 
 Wenn was schiefgegangen ist:
 
-* xref:maerkte:faq-sammlung.adoc#[Liste der FAQs und Lösungen]
+* xref:maerkte:amazon-faq-sammlung.adoc#[Liste der FAQs und Lösungen]
 
 '''
 
