--- a/docs/de-de/modules/maerkte/partials/mirakl-EP-cancellation.adoc
+++ b/docs/de-de/modules/maerkte/partials/mirakl-EP-cancellation.adoc
@@ -1,6 +1,6 @@
 :table-event-procedure: <<#{market}-ereignisaktion-auftragsstornierung>>
 
-Richte eine <<#automatisierung/ereignisaktionen, Ereignisaktion>> ein, um {market} automatisch über die Stornierung eines Auftrags zu informieren.
+Richte eine xref:automatisierung:ereignisaktionen.adoc#[Ereignisaktion] ein, um {market} automatisch über die Stornierung eines Auftrags zu informieren.
 
 include::_includes:partial$event-procedure.adoc[]
 
