--- a/docs/de-de/modules/maerkte/partials/mirakl-EP-refund.adoc
+++ b/docs/de-de/modules/maerkte/partials/mirakl-EP-refund.adoc
@@ -1,6 +1,6 @@
 :table-event-procedure: <<#{market}-ereignisaktion-rueckerstattung>>
 
-Richte eine <<#automatisierung/ereignisaktionen, Ereignisaktion>> ein, um {market} automatisch über die Zahlung einer Erstattung zu informieren.
+Richte eine xref:automatisierung:ereignisaktionen.adoc#[Ereignisaktion] ein, um {market} automatisch über die Zahlung einer Erstattung zu informieren.
 
 include::_includes:partial$event-procedure.adoc[]
 
