--- a/docs/de-de/modules/maerkte/partials/mirakl-EP-send-invoice.adoc
+++ b/docs/de-de/modules/maerkte/partials/mirakl-EP-send-invoice.adoc
@@ -1,6 +1,6 @@
 :table-event-procedure: <<#{market}-ereignisaktion-rechnung>>
 
-Richte eine <<#automatisierung/ereignisaktionen, Ereignisaktion>> ein, um automatisch eine Rechnung an {market} zu senden.
+Richte eine xref:automatisierung:ereignisaktionen.adoc#[Ereignisaktion] ein, um automatisch eine Rechnung an {market} zu senden.
 
 include::_includes:partial$event-procedure.adoc[]
 
