--- a/docs/de-de/modules/maerkte/partials/mirakl-EP-shipping-confirmation.adoc
+++ b/docs/de-de/modules/maerkte/partials/mirakl-EP-shipping-confirmation.adoc
@@ -1,6 +1,6 @@
 :table-event-procedure: <<#{market}-ereignisaktion-versandbestaetigung>>
 
-Richte eine <<#automatisierung/ereignisaktionen, Ereignisaktion>> ein, um automatisch eine Versandbestätigung an {market} zu senden.
+Richte eine xref:automatisierung:ereignisaktionen.adoc#[Ereignisaktion] ein, um automatisch eine Versandbestätigung an {market} zu senden.
 
 include::_includes:partial$event-procedure.adoc[]
 
