Fix error messages - DE+EN

--- a/docs/de-de/modules/daten/pages/catalogues-first-contact.adoc
+++ b/docs/de-de/modules/daten/pages/catalogues-first-contact.adoc
@@ -6,7 +6,7 @@
 
 Du beschäftigst dich zum ersten Mal mit den Katalogen? Dann bist du hier richtig.
 
-* <<#catalogues-formats, Welche Arten von Katalogen gibt es?>>
+* <<#catalogue-formats, Welche Arten von Katalogen gibt es?>>
 * <<#catalogue-overview, Lerne die Katalogübersicht kennen.>>
 
 include::_includes:page$new-page-info-box.adoc[]
