--- a/docs/de-de/modules/maerkte/pages/otto-market.adoc
+++ b/docs/de-de/modules/maerkte/pages/otto-market.adoc
@@ -235,7 +235,7 @@ Die automatisch erstellte Eigenschaft hat die folgenden Einstellungen:
 * Gruppe = OTTO Market
 
 '''
-*Verkaufspreis erstellen* = Erstellt einen neuen Verkaufspreis und ordnet diesen Verkaufspreis dem Marktplatz-Datenfeld zu. Dieser automatisch erstellte Verkaufspreis kann im Menü xref:artikel:preise.adoc#400[Einrichtung » Artikel » Verkaufspreise] geprüft und bearbeitet werden.
+*Verkaufspreis erstellen* = Erstellt einen neuen Verkaufspreis und ordnet diesen Verkaufspreis dem Marktplatz-Datenfeld zu. Dieser automatisch erstellte Verkaufspreis kann im Menü xref:artikel:preise.adoc#[Einrichtung » Artikel » Verkaufspreise] geprüft und bearbeitet werden.
 
 Der automatisch erstellte Verkaufspreis hat die folgenden Einstellungen:
 
