--- a/docs/de-de/modules/maerkte/pages/rewe.adoc
+++ b/docs/de-de/modules/maerkte/pages/rewe.adoc
@@ -489,7 +489,7 @@ Automatisch erstellte Eigenschaften haben die folgenden Einstellungen:
 * Gruppe = REWE
 
 '''
-*Verkaufspreis anlegen* = Erstellt einen neuen Verkaufspreis und ordnet diesen Verkaufspreis dem Datenfeld zu. Automatisch erstellte Verkaufspreise können im Menü xref:artikel:preise.adoc#400[Einrichtung » Artikel » Verkaufspreise] geprüft und bearbeitet werden.
+*Verkaufspreis anlegen* = Erstellt einen neuen Verkaufspreis und ordnet diesen Verkaufspreis dem Datenfeld zu. Automatisch erstellte Verkaufspreise können im Menü xref:artikel:preise.adoc#[Einrichtung » Artikel » Verkaufspreise] geprüft und bearbeitet werden.
 
 Automatisch erstellte Verkaufspreise haben die folgenden Einstellungen:
 
