--- a/docs/en-gb/modules/markets/pages/voelkner.adoc
+++ b/docs/en-gb/modules/markets/pages/voelkner.adoc
@@ -145,7 +145,7 @@ include::partial$mirakl-data-link-categories.adoc[]
 
 include::partial$properties-link.adoc[]
 
-[#{market}]
+[#catalogue-activation]
 == Activating the catalogue export
 
 :interval: daily
