--- a/docs/de-de/modules/daten/pages/import-introduction.adoc
+++ b/docs/de-de/modules/daten/pages/import-introduction.adoc
@@ -65,4 +65,4 @@ video::322203826[vimeo]
 
 == Kann's losgehen?
 
-TIP: Super. xref::daten:elasticsync.adoc#[Dann erstelle deinen ersten Import.]
+TIP: Super. xref:page:elasticsync.adoc#[Dann erstelle deinen ersten Import.]
