--- a/docs/en-gb/modules/markets/pages/automatic-data-exchange.adoc
+++ b/docs/en-gb/modules/markets/pages/automatic-data-exchange.adoc
@@ -164,7 +164,7 @@ include::partial$mirakl-data-link-categories.adoc[]
 
 include::partial$properties-link.adoc[]
 
-[#{market}]
+[#catalogue-activation]
 == Activating the catalogue export
 
 :interval: daily
