--- a/docs/en-gb/modules/markets/pages/conrad.adoc
+++ b/docs/en-gb/modules/markets/pages/conrad.adoc
@@ -139,7 +139,7 @@ include::partial$mirakl-data-link-categories.adoc[]
 
 include::partial$properties-link.adoc[]
 
-[#{market}]
+[#catalogue-activation]
 == Activating the catalogue export
 
 :interval: daily
