--- a/docs/en-gb/modules/markets/partials/catalogue-filters.adoc
+++ b/docs/en-gb/modules/markets/partials/catalogue-filters.adoc
@@ -26,7 +26,7 @@ Adding a filter:
 [.collapseBox]
 .Available catalogue filters
 --
-For {market}, the filters explained in <<tabelle-katalogfilter>> are available.
+For {market}, the filters explained in <<table-catalogue-filters>> are available.
 
 [[table-catalogue-filters]]
 .Available catalogue filters
