Error messages - EN

--- a/docs/en-gb/modules/markets/pages/amazon-business.adoc
+++ b/docs/en-gb/modules/markets/pages/amazon-business.adoc
@@ -51,7 +51,7 @@ Creating a standard sales price for B2B items:
 . Enter *1* for *Minimum quantity*.
 . Select the referrer *Amazon Germany B2B*.
 . Select the *Amazon account* that is activated for Amazon B2B.
-. Pay attention to the explanations given on the xref:item:prices.adoc#400[Sales prices and price calculation] page of the manual and carry out further setting as desired.
+. Pay attention to the explanations given on the xref:item:prices.adoc#[Sales prices and price calculation] page of the manual and carry out further setting as desired.
 . Save (terra:save[]) the settings.
 
 [#4570]
