--- a/docs/en-gb/modules/markets/pages/otto-market.adoc
+++ b/docs/en-gb/modules/markets/pages/otto-market.adoc
@@ -235,7 +235,7 @@ The property is created with the following settings:
 * Group = OTTO Market
 
 '''
-*Creating a sales price* = Creates a sales price and maps this sales price to the marketplace data field. You can check and edit this sales price in the xref:item:prices.adoc#400[Setup » Item » Sales prices] menu.
+*Creating a sales price* = Creates a sales price and maps this sales price to the marketplace data field. You can check and edit this sales price in the xref:item:prices.adoc#[Setup » Item » Sales prices] menu.
 
 The sales price is created with the following settings:
 
