--- a/docs/en-gb/modules/markets/pages/rewe.adoc
+++ b/docs/en-gb/modules/markets/pages/rewe.adoc
@@ -492,7 +492,7 @@ Automatically created properties are created with the following settings:
 * Group = REWE
 
 '''
-*Creating a sales price* = Creates a sales price and maps this sales price to the data field. You can check and edit automatically created sales prices in the xref:en:prices.adoc#400[Setup » Item » Sales prices] menu.
+*Creating a sales price* = Creates a sales price and maps this sales price to the data field. You can check and edit automatically created sales prices in the xref:en:prices.adoc#[Setup » Item » Sales prices] menu.
 
 Automatically created sales prices are created with the following settings:
 
