--- a/docs/de-de/modules/maerkte/pages/kaufland-de-einrichten.adoc
+++ b/docs/de-de/modules/maerkte/pages/kaufland-de-einrichten.adoc
@@ -481,7 +481,7 @@ Nachdem du einen Katalog erstellt hast, ordnest du die Datenfelder des Marktplat
 Verwende xref:artikel:eigenschaften.adoc#500[Eigenschaften], um Werte für Marktplatz-Datenfelder zu übergeben, für die es keine Entsprechung in plentymarkets gibt.
 ====
 
-:eigene-datenfelder:
+:own-data-fields:
 
 include::partial$catalogue-mapping.adoc[]
 
