Some more adjustments

--- a/docs/de-de/modules/maerkte/partials/variantenverfuegbarkeit.adoc
+++ b/docs/de-de/modules/maerkte/partials/variantenverfuegbarkeit.adoc
@@ -35,6 +35,9 @@ endif::mirakl-herkunft[]
 ifdef::web-api[]
 . Aktiviere die Option *Web-API*.
 endif::web-api[]
+ifdef::kaufland[]
+*_Hinweis:_* Wenn du deine Artikel mit dem Katalogexport an Kaufland überträgst, muss die Option *Web-API* nicht aktiviert werden.
+endif::kaufland[]
 ifdef::idealo-direkt[]
 . *_Optional:_* Wenn du idealo Direktkauf nutzen möchtest, aktiviere die Option *idealo Direktkauf*.
 endif::idealo-direkt[]
