--- a/docs/en-gb/modules/markets/partials/kaufland-recommended-mappings.adoc
+++ b/docs/en-gb/modules/markets/partials/kaufland-recommended-mappings.adoc
@@ -13,7 +13,7 @@ However, some data fields are the same in each category. Only the recommended ma
 |===
 |Marketplace data field |Mandatory? |Recommended plentymarkets mapping
 
-3+| Unit data +
+3+| Offer data +
 *_Note:_* The data specified here are required for creating offers on Kaufland and are the same for each product category. Offers are created for products which already exist on Kaufland.
 
 | sku
