--- a/docs/de-de/modules/maerkte/pages/kaufland-de-einrichten.adoc
+++ b/docs/de-de/modules/maerkte/pages/kaufland-de-einrichten.adoc
@@ -294,6 +294,8 @@ Bereite nun deine Varianten vor.
 :option-availability: Kaufland.de
 :web-api:
 
+:kaufland:
+
 include::partial$variantenverfuegbarkeit.adoc[]
 
 // Web-API erforderlich!
@@ -456,10 +458,6 @@ Katalog mit dem Assistenten erstellen:
 | Für welches Kaufland-Konto soll dieser Katalog genutzt werden?
 | Wähle das Kaufland-Konto, für das ein Katalog erstellt werden soll.
 
-| Wie soll der Katalog für diese Kaufland-Produktkategorie heißen? Der Name wird im Menü *Daten » Kataloge* angezeigt und nicht zu Kaufland exportiert.
-| Hier gibst du einen internen Namen für den Kaufland-Katalog ein. Dieser Name ist nur in deinem plentymarkets System im Menü *Daten » Kataloge* sichtbar und dient einer besseren Übersicht über deine Kataloge. Der Name des Katalogs wird nicht zu Kaufland exportiert. +
-Wähle einen Namen, der aussagekräftig ist und dir bei der Übersicht über deine Kataloge hilft. Wenn du einen Katalog für die Produktkategorie *Fernseher* und die Plattform *Deutschland* erstellst, kannst du den Katalog zum Beispiel *Kaufland: Fernseher (DE)* nennen.
-
 | Wähle eine Kaufland-Länderplattform, auf der du deine Artikel anbieten möchtest. Die verfügbaren Länderplattformen werden als Ländercodes angezeigt. Bei Kaufland heißen die Länderplattformen Storefronts.
 | Hier wählst du die Kaufland-Länderplattform, für die ein Katalog erstellt werden soll. Du legst also in diesem Katalog fest, welche Artikel du in diesem Land in der gewählten Produktkategorie verkaufen möchtest. Du kannst unterschiedliche Artikeldaten an verschiedene Länderplattformen exportieren. +
 Die verfügbaren Länderplattformen werden in Länder-Codes angegeben, zum Beispiel *DE* für *Deutschland*. +
@@ -467,6 +465,10 @@ Die verfügbaren Länderplattformen werden in Länder-Codes angegeben, zum Beisp
 
 | Für welche Kaufland-Kategorie soll ein Katalog erstellt werden? Erstelle einen Katalog für jede Kaufland-Produktkategorie, in der du deine Artikel anbieten möchtest.
 | Hier wählst du die Produktkategorie, für die ein Katalog erstellt werden soll. Für jede Produktkategorie, in der du deine Artikel auf Kaufland anbieten möchtest, muss ein eigener Katalog erstellt werden. Du erstellst also zum Beispiel verschiedene Kataloge für die Kategorien *Fernseher* und *Kameras*.
+
+| Wie soll der Katalog für diese Kaufland-Produktkategorie heißen? Der Name wird im Menü *Daten » Kataloge* angezeigt und nicht zu Kaufland exportiert.
+| Hier gibst du einen internen Namen für den Kaufland-Katalog ein. Dieser Name ist nur in deinem plentymarkets System im Menü *Daten » Kataloge* sichtbar und dient einer besseren Übersicht über deine Kataloge. Der Name des Katalogs wird nicht zu Kaufland exportiert. +
+Wähle einen Namen, der aussagekräftig ist und dir bei der Übersicht über deine Kataloge hilft. Wenn du einen Katalog für die Produktkategorie *Fernseher* und die Plattform *Deutschland* erstellst, kannst du den Katalog zum Beispiel *Kaufland: Fernseher (DE)* nennen.
 |===
 --
 
