Edited recommended mappings

--- a/docs/de-de/modules/maerkte/partials/kaufland-recommended-mappings.adoc
+++ b/docs/de-de/modules/maerkte/partials/kaufland-recommended-mappings.adoc
@@ -61,11 +61,13 @@ Wenn noch andere Händler:innen das gleiche Produkt anbieten, passt die Tiefprei
 
 | id_warehouse
 | ja
-| 
+| Die ID des Kaufland-Lagers. +
+* Eigenschaft des Typs *Auswahl* oder *Ganze Zahl*
 
 | id_shipping_group
 | ja
-| 
+| Die ID der Versandgruppe. +
+* Eigenschaft des Typs *Auswahl* oder *Ganze Zahl*
 
 3+| Produktdaten +
 *_Hinweis:_* Diese Daten werden benötigt, um neue Produkte auf Kaufland zu erstellen. Die Daten, die hier verknüpft werden können, unterscheiden sich je nach Produkategorie.
